# discord-chatbot

./: README.md  chat-bot.ipynb  chatbot.toml  pyproject.toml
server/: main.py
src/agent/: Supervisor.py
src/graph/: LLMGraph.py
src/graph/tools/: tools.py
src/helper/: CustomCallbacks.py
ui/chatty/: package.json
ui/chatty/src/: App.js
