[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = "Micah's Discord chatbot using LLM (langchain, langraph)"
authors = ["Micah Forster <mgfos207@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.2.3"
typing-extensions = "^4.12.2"
langchain-openai = "^0.1.21"
langchain-anthropic = "^0.1.22"
langchain-community = "^0.2.12"
langsmith = "^0.1.99"
langchainhub = "^0.1.21"
#duckduckgo-search = "^6.2.7"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
pymilvus = "^2.4.5"
#datasets = "^2.21.0"
tqdm = "^4.66.5"
langchain-milvus = "^0.1.4"
langchain-huggingface = "^0.0.3"
serpapi = "^0.1.5"
langchain-ollama = "^0.1.1"
tavily-python = "^0.5.0"
#deep-phonemizer = "^0.0.19"
#torchaudio = "^2.4.1"
matplotlib = "^3.9.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.9.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
